# aoc

./: Cargo.toml
.cargo/: config.toml
src/: a1.rs  a2.rs  a3.rs  a4.rs  a5.rs  a6.rs  a7.rs  a8.rs  a9.rs  aX.rs
